--- a/Polish/Polish/Polish.vcxproj
+++ b/Polish/Polish/Polish.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Polish.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="doctest.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
